// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`driver.route.peer-budget-malfunction.acceptance given: [journey] review malfunction does not consume budget when: [t0] artifact created, review malfunctions (exit 1) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: flaky-reviewer (l1, 1/2)
   │   ├─ 💥 malfunction
   │   └─ review: .reviews/peer/1.execute._.review.i1.8739656801d5e77f22.r1._.given.by_peer.flaky-reviewer.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   ├─ options
   │  ├─ overrule the malfunction
   │  │  └─ rhx route.stone.set --stone 1.execute --as overruled
   │  └─ or fix the reviewer, then retry
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: flaky-reviewer (l1, 0/2)
      │       ├─ 💥 malfunction
      │       └─ review: .reviews/peer/1.execute._.review.i1.8739656801d5e77f22.r1._.given.by_peer.flaky-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.peer-budget-malfunction.acceptance given: [journey] review malfunction does not consume budget when: [t1] malfunction cleared, review succeeds with blockers then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: flaky-reviewer (l1, 1/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.execute._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.flaky-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: flaky-reviewer (l1, 1/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: .reviews/peer/1.execute._.review.i2.dfc5faff83ea2fcb55.r1._.given.by_peer.flaky-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-malfunction.acceptance given: [journey] review malfunction does not consume budget when: [t2] second successful review at budget limit then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: flaky-reviewer (l1, 2/2)
   │   ├─ rejected [TIME]
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.execute._.review.i3.457fd5ef46e053a35e.r1._.given.by_peer.flaky-reviewer.md
   │
   └─ ✗ judge.1 - blocked [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = blockers exceed threshold (1 > 0)
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: flaky-reviewer (l1, 2/2)
      │       ├─ rejected [TIME]
      │       ├─ 1 blocker 🔴
      │       ├─ 0 nitpicks ✓
      │       └─ review: .reviews/peer/1.execute._.review.i3.457fd5ef46e053a35e.r1._.given.by_peer.flaky-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              ├─ finished [TIME] ✗
              └─ reason: blockers exceed threshold (1 > 0)
"
`;

exports[`driver.route.peer-budget-malfunction.acceptance given: [journey] review malfunction does not consume budget when: [t3] third attempt, review SKIPPED (exhausted) then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: flaky-reviewer (l1, 2/2)
   │   ├─ exhausted, cached
   │   ├─ 1 blocker 🔴
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.execute._.review.i3.457fd5ef46e053a35e.r1._.given.by_peer.flaky-reviewer.md
   │
   └─ halted: peer reviewer budget exhausted

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = blocked
   ├─ reason = peer reviewer budget exhausted: flaky-reviewer
   ├─ options
   │  ├─ increase budget
   │  │  └─ rhx route.guard.budget --for review --add N --peer flaky-reviewer --stone 1.execute
   │  └─ approve as-is
   │     └─ rhx route.stone.set --stone 1.execute --as approved
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      └─ reviews
          └─ r1: flaky-reviewer (l1, 2/2)
              ├─ exhausted, cached
              ├─ 1 blocker 🔴
              ├─ 0 nitpicks ✓
              └─ review: .reviews/peer/1.execute._.review.i3.457fd5ef46e053a35e.r1._.given.by_peer.flaky-reviewer.md
"
`;

exports[`driver.route.peer-budget-malfunction.acceptance given: [journey] review malfunction does not consume budget when: [t4] malfunction after budget extension then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: flaky-reviewer (l1, 3/3)
   │   ├─ 💥 malfunction
   │   └─ review: .reviews/peer/1.execute._.review.i4.0997a4c5910ffe05d0.r1._.given.by_peer.flaky-reviewer.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = malfunction
   ├─ reason = reviewer or judge malfunctioned
   ├─ options
   │  ├─ overrule the malfunction
   │  │  └─ rhx route.stone.set --stone 1.execute --as overruled
   │  └─ or fix the reviewer, then retry
   └─ guard
      ├─ artifacts
      │   └─ src/**/*.ts
      ├─ reviews
      │   └─ r1: flaky-reviewer (l1, 2/3)
      │       ├─ 💥 malfunction
      │       └─ review: .reviews/peer/1.execute._.review.i4.0997a4c5910ffe05d0.r1._.given.by_peer.flaky-reviewer.md
      └─ judges
          └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
              └─ finished [TIME] ✓
"
`;

exports[`driver.route.peer-budget-malfunction.acceptance given: [journey] review malfunction does not consume budget when: [t5] recover from malfunction, review passes then: stdout has good vibes 1`] = `
"🦉 the way speaks for itself
   │
   ├─ r1: flaky-reviewer (l1, 3/3)
   │   ├─ approved [TIME]
   │   ├─ 0 blockers ✓
   │   ├─ 0 nitpicks ✓
   │   └─ review: .reviews/peer/1.execute._.review.i5.ae29d35593838b9619.r1._.given.by_peer.flaky-reviewer.md
   │
   └─ ✓ judge.1 - allowed [TIME]

🗿 route.stone.set
   ├─ stone = 1.execute
   ├─ passage = allowed
   ├─ guard
   │  ├─ artifacts
   │  │   └─ src/**/*.ts
   │  ├─ reviews
   │  │   └─ r1: flaky-reviewer (l1, 3/3)
   │  │       ├─ approved [TIME]
   │  │       ├─ 0 blockers ✓
   │  │       ├─ 0 nitpicks ✓
   │  │       └─ review: .reviews/peer/1.execute._.review.i5.ae29d35593838b9619.r1._.given.by_peer.flaky-reviewer.md
   │  └─ judges
   │      └─ j1: rhx route.stone.judge --mechanism reviewed? --stone $stone --route $route --allow-blockers 0 --allow-nitpicks 1
   │          └─ finished [TIME] ✓
   │
   └─ the way continues, run
      └─ rhx route.drive
"
`;
